juci theming: get rid of the {{}} flickering when page is first loaded by correctly using ng-cloak directive.

--- a/themes/juci-theme-inteno/src/css/theme.css
+++ b/themes/juci-theme-inteno/src/css/theme.css
@@ -1,3 +1,7 @@
+[ng\:cloak], [ng-cloak], .ng-cloak {
+	display: none !important;
+}
+
 @font-face {
     font-family: "eurostyle";
     src: url("/fonts/proximanova-regular-webfont.woff") format('woff');
